# ros-fhnw-localization

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.sh  config.rviz  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
aruco_pose_estimation/: cameras.yml  package.xml  setup.cfg  setup.py
aruco_pose_estimation/aruco_pose_estimation/: aruco_tracker.cpp  aruco_tracker.h  aruco_tracker.py
aruco_pose_estimation/test/: test_estimate.py  test_marker_pos.py  test_transforms.py
config/: SN35257512.conf  aruco_config.yml  calibration_pattern.yaml  cameras.yml  convert_stereo.py  hipnuc_config.yml  markers_fh.yml  markers_my.yml  meshes.yaml  optimizer_transform.yml  pose_tracker.yaml  pose_transformer.yaml  qb_config.yml  sllidar_a3m.yml  stereo_aruco_detector.yaml  wheel_params.yml
config/2025/base/: config.yaml  config_estimator.yaml  config_init.yaml  config_lidar.yaml  config_wheel.yaml
config/cameras/: zed1.ini
config/euroc/mins/: config_camera.yaml  config_imu.yaml  config_init.yaml
config/mins/: config.yaml  config_camera.yaml  config_imu.yaml  config_init.yaml  config_lidar.yaml  config_vicon.yaml  config_wheel.yaml
config/old/mins_baseline/: config_camera.yaml  config_imu.yaml  config_system.yaml  config_wheel.yaml
config/old/mins_cam_only/: config_system.yaml
config/old/mins_clahe/: config_camera.yaml
config/old/mins_clahe_cam_only/: config_init.yaml
config/old/mins_long_init/: config_camera.yaml  config_init.yaml
config/old/mins_many_features/: config_camera.yaml
config/old/mins_wheel_only/: config_camera.yaml
config/openvins/: estimator_config.yaml  kalibr_imucam_chain.yaml
config/rover/mins/: config.yaml  config_camera.yaml  config_estimator.yaml  config_tlio.yaml
config/rover/mins/rover/: config_camera.yaml  config_init.yaml  config_wheel.yaml
config/rover/mins_no_wheel/: config_wheel.yaml
config/rover/openvins/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
docker/: Dockerfile  Dockerfile.dev  apt-dev.txt  apt.txt  dev-requirements.in  dev-requirements.txt  entrypoint.sh  requirements.in  requirements.txt
fhnw_localization/: package.xml  setup.cfg  setup.py
fhnw_localization/fhnw_localization/: aruco_detect.py  optimizer_transform.py  ply_publisher.py  pose_tracker.py  tf_transformations.py  visualizer.py
hipnuc_imu/config/: hipnuc_config.yaml
hipnuc_imu/launch/: imu_spec_msg.launch.py
hipnuc_imu/src/: serial_port.cpp
launch/: launch.py
notebooks/: Derivation.ipynb  Rigid Simulation.ipynb  Rover Movement.ipynb  compare_recorings.ipynb  derivation2.ipynb  lidar_pos_estimate.ipynb  point.npy  wheel_calculations.ipynb
notebooks/.ipynb_checkpoints/: path_comparison-checkpoint.ipynb
odom_transform/: CMakeLists.txt  package.xml
odom_transform/src/: transformer.cpp
scripts/: calib_camera.sh  calib_imu.sh  calib_imu_camera.sh  calib_imu_zed.sh  calib_zed.sh  extract_imu_training.py  record.sh  rosbag_demo.ipynb  run_and_extract.sh
wheel_odometry/: CMakeLists.txt  package.xml  test_server.py
wheel_odometry/src/: OdomClientNode.cpp  TwistIntegrator.cpp  WheelCalc.cpp  kissnet.hpp
